--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -49,6 +49,7 @@
     font-size: 2rem;
     display: flex;
     align-items: center;
+    line-height: 40px;
   }
   
   .fa-typo3 {
@@ -97,7 +98,31 @@
     display: none;
   }
   
+
   @media screen and (max-width: 960px) {
+    .icun{
+      width: 200px;
+    }
+    .icun a{
+      padding: 8px;
+      font-size: 16px;
+      margin: 2px;
+      text-align: right;
+    }
+    .icun a i{
+      margin-left: 12px;
+      height: 30px;
+      width: 30px;
+      color: black;
+      border-radius: 50%;
+      text-align: center;
+      line-height: 30px;
+      transition: all .5s;
+    }
+    .navbar-logo {
+      font-size: 1rem;
+
+    }
     .NavbarItems {
       position: relative;
     }
@@ -120,6 +145,7 @@
       opacity: 1;
       transition: all 0.5s ease;
       z-index: 1;
+      padding-bottom:80px;
     }
   
     .nav-links {
@@ -127,8 +153,8 @@
       padding: 2rem;
       width: 100%;
       display: table;
+ 
     }
-  
     .nav-links:hover {
       background-color: #fff;
       color: #242424;
