--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -1,3 +1,4 @@
+
 .header-1{
     display: flex;
     justify-content: center;
@@ -146,6 +147,11 @@
       transition: all 0.5s ease;
       z-index: 1;
       padding-bottom:80px;
+      position: fixed;
+
+    }
+    .header-1{
+      display: none;
     }
   
     .nav-links {
