--- a/src/App.css
+++ b/src/App.css
@@ -2,13 +2,14 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  font-family: 'PT Sans', sans-serif;
-
+  font-family: "PT Sans", sans-serif;
+  overflow: none;
 }
-html,body{
+html,
+body {
   overflow: hidden;
 }
-.page-wrapper{
+.page-wrapper {
   height: 100vh;
   overflow-y: auto;
   overflow-x: hidden;
@@ -26,7 +27,7 @@ html,body{
 }
 
 .services {
-  background-image: url('./images/img-2.jpg');
+  background-image: url("./images/img-2.jpg");
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -35,7 +36,7 @@ html,body{
 }
 
 .products {
-  background-image: url('./images/img-1.jpg');
+  background-image: url("./images/img-1.jpg");
   background-position: center;
   background-size: fill;
   background-repeat: no-repeat;
@@ -44,7 +45,7 @@ html,body{
 }
 
 .sign-up {
-  background-image: url('./images/img-8.jpg');
+  background-image: url("./images/img-8.jpg");
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
