--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -1,218 +1,213 @@
-
-.header-1{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
-    background-color: #ec1d25;
-    color: #f6e58d;
-    padding: 5px;
+.header-1 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  background-color: #ec1d25;
+  color: #f6e58d;
+  padding: 5px;
 }
-.header-1-item{
-    display: flex;
-    align-items: center;
-    padding: 10px 15px;    
+.header-1-item {
+  display: flex;
+  align-items: center;
+  padding: 10px 15px;
 }
 
-.header-1-icon{
-    width: 16px; 
-    height: 16px;
-    fill: #f6e58d;
-    margin-right: 10px;
+.header-1-icon {
+  width: 16px;
+  height: 16px;
+  fill: #f6e58d;
+  margin-right: 10px;
 }
 
 .navbar {
-    background: linear-gradient(90deg, rgb(28, 27, 27) 0%, rgb(26, 23, 23) 100%);
-    height: 80px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 1.2rem;
-    position: sticky;
-    top: 0;
-    z-index: 999;
+  background: linear-gradient(90deg, rgb(28, 27, 27) 0%, rgb(26, 23, 23) 100%);
+  height: 80px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.2rem;
+  position: sticky;
+  top: 0;
+  z-index: 999;
+}
+
+.navbar-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 80px;
+}
+
+.navbar-logo {
+  color: #fff;
+  justify-self: start;
+  margin-left: 20px;
+  cursor: pointer;
+  text-decoration: none;
+  font-size: 2rem;
+  display: flex;
+  align-items: center;
+  line-height: 40px;
+}
+
+.fa-typo3 {
+  margin-left: 0.5rem;
+  font-size: 1.8rem;
+}
+
+.nav-menu {
+  display: grid;
+  grid-template-columns: repeat(5, auto);
+  grid-gap: 10px;
+  list-style: none;
+  text-align: center;
+  width: 60vw;
+  justify-content: end;
+  margin-right: 2rem;
+}
+
+.nav-item {
+  height: 80px;
+}
+
+.nav-links {
+  color: #fff;
+  display: flex;
+  align-items: center;
+  text-decoration: none;
+  padding: 0.5rem 1rem;
+  height: 100%;
+}
+
+.nav-links:hover {
+  border-bottom: 4px solid #fff;
+  transition: all 0.2s ease-out;
+}
+
+.fa-bars {
+  color: #fff;
+}
+
+.nav-links-mobile {
+  display: none;
+}
+
+.menu-icon {
+  display: none;
+}
+
+@media screen and (max-width: 960px) {
+  .icun {
+    width: 160px;
   }
-  
-  .navbar-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 80px;
-    max-width: 1500px;
+  .icun a {
+    padding: 6px;
+    font-size: 14px;
+    margin: 1.6px;
+    text-align: right;
   }
-  
-  .navbar-logo {
-    color: #fff;
-    justify-self: start;
-    margin-left: 20px;
-    cursor: pointer;
-    text-decoration: none;
-    font-size: 2rem;
-    display: flex;
-    align-items: center;
-    line-height: 40px;
-  }
-  
-  .fa-typo3 {
-    margin-left: 0.5rem;
-    font-size: 1.8rem;
-  }
-  
-  .nav-menu {
-    display: grid;
-    grid-template-columns: repeat(5, auto);
-    grid-gap: 10px;
-    list-style: none;
+  .icun a i {
+    margin-left: 10px;
+    height: 24px;
+    width: 24px;
+    color: black;
+    border-radius: 50%;
     text-align: center;
-    width: 60vw;
-    justify-content: end;
-    margin-right: 2rem;
+    line-height: 30px;
+    transition: all 0.5s;
   }
-  
-  .nav-item {
-    height: 80px;
+  .navbar-logo {
+    font-size: 1.2rem;
   }
-  
-  .nav-links {
-    color: #fff;
+  .NavbarItems {
+    position: relative;
+  }
+
+  .nav-menu {
     display: flex;
-    align-items: center;
-    text-decoration: none;
-    padding: 0.5rem 1rem;
-    height: 100%;
+    flex-direction: column;
+    width: 100%;
+    height: 90vh;
+    position: absolute;
+    top: 80px;
+    left: -100%;
+    opacity: 1;
+    transition: all 0.5s ease;
   }
-  
+
+  .nav-menu.active {
+    background: #242222;
+    left: 0;
+    opacity: 1;
+    transition: all 0.5s ease;
+    z-index: 1;
+    padding-bottom: 80px;
+    /* position: fixed; */
+  }
+  .header-1 {
+    display: none;
+  }
+
+  .nav-links {
+    text-align: center;
+    padding: 2rem;
+    width: 100%;
+    display: table;
+    margin-top: -2rem;
+  }
   .nav-links:hover {
-    border-bottom: 4px solid #fff;
-    transition: all 0.2s ease-out;
+    background-color: #fff;
+    color: #242424;
+    border-radius: 0;
   }
-  
-  .fa-bars {
-    color: #fff;
+
+  .navbar-logo {
+    position: absolute;
+    top: 0;
+    left: 0;
+    transform: translate(25%, 50%);
   }
-  
-  .nav-links-mobile {
-    display: none;
-  }
-  
+
   .menu-icon {
-    display: none;
+    display: block;
+    position: absolute;
+    top: 0;
+    right: 0;
+    transform: translate(-100%, 60%);
+    font-size: 1.8rem;
+    cursor: pointer;
   }
-  
 
-  @media screen and (max-width: 960px) {
-    .icun{
-      width: 200px;
-    }
-    .icun a{
-      padding: 8px;
-      font-size: 16px;
-      margin: 2px;
-      text-align: right;
-    }
-    .icun a i{
-      margin-left: 12px;
-      height: 30px;
-      width: 30px;
-      color: black;
-      border-radius: 50%;
-      text-align: center;
-      line-height: 30px;
-      transition: all .5s;
-    }
-    .navbar-logo {
-      font-size: 1rem;
-
-    }
-    .NavbarItems {
-      position: relative;
-    }
-  
-    .nav-menu {
-      display: flex;
-      flex-direction: column;
-      width: 100%;
-      height: 90vh;
-      position: absolute;
-      top: 80px;
-      left: -100%;
-      opacity: 1;
-      transition: all 0.5s ease;
-    }
-  
-    .nav-menu.active {
-      background: #242222;
-      left: 0;
-      opacity: 1;
-      transition: all 0.5s ease;
-      z-index: 1;
-      padding-bottom:80px;
-      position: fixed;
-
-    }
-    .header-1{
-      display: none;
-    }
-  
-    .nav-links {
-      text-align: center;
-      padding: 2rem;
-      width: 100%;
-      display: table;
- 
-    }
-    .nav-links:hover {
-      background-color: #fff;
-      color: #242424;
-      border-radius: 0;
-    }
-  
-    .navbar-logo {
-      position: absolute;
-      top: 0;
-      left: 0;
-      transform: translate(25%, 50%);
-    }
-  
-    .menu-icon {
-      display: block;
-      position: absolute;
-      top: 0;
-      right: 0;
-      transform: translate(-100%, 60%);
-      font-size: 1.8rem;
-      cursor: pointer;
-    }
-  
-    .fa-times {
-      color: #fff;
-      font-size: 2rem;
-    }
-  
-    .nav-links-mobile {
-      display: block;
-      text-align: center;
-      margin: 2rem auto;
-      border-radius: 4px;
-      width: 80%;
-      text-decoration: none;
-      font-size: 1.5rem;
-      background-color: transparent;
-      color: #fff;
-      padding: 14px 20px;
-      border: 1px solid #fff;
-      transition: all 0.3s ease-out;
-    }
-  
-    .nav-links-mobile:hover {
-      background: #fff;
-      color: #242424;
-      transition: 250ms;
-    }
+  .fa-times {
+    color: #fff;
+    font-size: 2rem;
   }
-  
 
-.icun{
+  .nav-links-mobile {
+    display: block;
+    text-align: center;
+    margin: 2rem auto;
+    margin-top: -2rem;
+    border-radius: 4px;
+    width: 80%;
+    text-decoration: none;
+    font-size: 1.5rem;
+    background-color: transparent;
+    color: #fff;
+    padding: 14px 20px;
+    border: 1px solid #fff;
+    transition: all 0.3s ease-out;
+  }
+
+  .nav-links-mobile:hover {
+    background: #fff;
+    color: #242424;
+    transition: 250ms;
+  }
+}
+
+.icun {
   position: fixed;
   top: 30%;
   left: 0%;
@@ -221,7 +216,7 @@
   display: flex;
   flex-direction: column;
 }
-.icun a{
+.icun a {
   text-decoration: none;
   text-transform: uppercase;
   padding: 10px;
@@ -231,16 +226,16 @@
   margin: 2px;
   text-align: right;
   border-radius: 0px 50px 50px 0px;
-  transform: translate(-230px,0px);
-  transition: all .5s;
+  transform: translate(-230px, 0px);
+  transition: all 0.5s;
 }
-.icun a:hover{
-  transform: translate(0px,0px);
+.icun a:hover {
+  transform: translate(0px, 0px);
 }
-.icun a:hover i{
+.icun a:hover i {
   transform: rotate(20deg);
 }
-.icun a i{
+.icun a i {
   margin-left: 20px;
   background-color: white;
   height: 40px;
@@ -249,24 +244,23 @@
   border-radius: 50%;
   text-align: center;
   line-height: 40px;
-  transition: all .5s;
+  transition: all 0.5s;
 }
-i.fab.fa-facebook-f{
-  color: #2C80D3;
+i.fab.fa-facebook-f {
+  color: #2c80d3;
 }
-i.fab.fa-youtube{
+i.fab.fa-youtube {
   color: #fa0910;
 }
-i.fab.fa-twitter{
+i.fab.fa-twitter {
   color: #53c5ff;
 }
-.facebook{
-  background-color: #2C80D3;
-
+.facebook {
+  background-color: #2c80d3;
 }
-.youtube{
+.youtube {
   background-color: #fa0910;
 }
-.twitter{
+.twitter {
   background-color: #53c5ff;
 }
